css/index.css
html, body {
  margin: 0px;
  padding: 0px;
  min-height: 100%;
  height: 100%;
}
#new-project-button {
    margin-right: 1%;
}

#new-project-button .fa-plus-square:before {
    margin-right: 10px;
}

.btn-outline-danger {
    border-color: #e74c3c;
}

.btn-outline-danger:hover {
    background-color: #e74c3c;
    border-color: #e74c3c;
}

/* The Modal (background) */
.modal {
    display: none; /* Hidden by default */
    position: fixed; /* Stay in place */
    z-index: 1; /* Sit on top */
    padding-top: 100px; /* Location of the box */
    left: 0;
    top: 0;
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    overflow: auto; /* Enable scroll if needed */
    background-color: rgb(0,0,0); /* Fallback color */
    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
}

#main-project-container {
    display: flex;
    flex-wrap: wrap;
}

#main-project-container > * {
    margin: 30px 30px;
}

/* Modal Content */
#modal-content-bt-override {
    background-color: #fefefe;
    margin: auto;
    padding: 20px;
    border: 1px solid #888;
    width: 50%;
}

/* The Close Button */
.close {
    color: #aaaaaa;
    float: right;
    font-size: 28px;
    font-weight: bold;
    text-align: right;
}

.close:hover,
.close:focus {
    color: #000;
    text-decoration: none;
    cursor: pointer;
}

.card {
    margin: 5% 5%;
}

.fa-window-close {
    font-size: 40px;
    color: #007bff;
    margin-bottom: 10px;
}

.navbar .btn-primary, .card-body .btn-primary {
	background: #2980b9;
	border-color: #2980b9;
}

.modal-content .p-3 {
    width: 70%;
    margin: 0 auto;
}

a.navbar-brand:hover {
	opacity: .5;
}

/*hide caret in dropdown menu*/
.btn-group .dropdown-toggle::after { 
    display: none;
}

.btn-group{
    float: right;
}

.task .btn-group i{
    margin: 13px;
}
#logout {
    font-size: 18px;
    margin-left: 75%;
}

.task{
    display: flex;
    word-break: break-word;
    height: fit-content;
}

.task-title{
    display: flex;
    justify-self: center;
}

.list-title{
    word-wrap: break-word;
}

[contenteditable="true"]{
    border: 2px solid rgb(231, 76, 60);
    background-color: rgb(243, 188, 154);
    display: inline-block;
    min-width: 200px;
}

